# pheonixrt

./: .gitignore  Brimstone_src.sln  CLAUDE.md  CYTHON_WRAPPER_DESIGN.md  DesignRtModel.md  DicomBehavingBadly.md  IHEBasicImageReview.md  LICENSE  Notes.org  ProjectHome.md  README.md  ShiftVisualization.md  TechnicalDebt.md  Variational_bayes_inverse_planning.md  VerificationExpertSystem.md  WarpTPS.md  WhatIfReOptimization.md  WhyOpenSource.md  entropy_calc.py  entropy_calc_notebook.ipynb  entropy_max.ipynb  entropy_max.pyproj  entropy_max_histo.ipynb  entropy_max_histo.py  index.html  mnist_autoencoder.py  mnist_autoencoder_v2.py  mnist_vae_shift.ipynb  num_grad_list.py  params.json  pinwheel_shifter.ipynb  report.txt  test.vim
.ipynb_checkpoints/: entropy_max_histo-checkpoint.ipynb
Brimstone/: Brimstone.h  Brimstone.rc  Brimstone.vcproj  Brimstone.vcxproj  BrimstoneDoc.cpp  BrimstoneDoc.h  BrimstoneView.cpp  BrimstoneView.h  MainFrm.cpp  OptThread.cpp  OptThread.h  PlanSetupDlg.cpp  PlanSetupDlg.h  PlanarView.cpp  PlanarView.h  PrescriptionBar.cpp  PrescriptionToolbar.cpp  PrescriptionToolbar.h  ReadMe.txt  SeriesDicomImporter.cpp  SeriesDicomImporter.h  stdafx.cpp
Graph/: ContourEditTracker.cpp  DataSeries.cpp  DisplayBlendFilter.cpp  Graph.cpp  Graph.vcproj  Graph.vcxproj  HistogramDataSeries.cpp  IsocurveOverlay.cpp  TargetDVHSeries.cpp  ZoomPanTracker.cpp  stdafx.h
OptimizeN/: ConjGradOptimizer.cpp  LineFunction.cpp  ObjectiveFunction.cpp  OptimizeN.vcproj  Optimizer.cpp  stdafx.cpp
RedesignRayTrace/: ItkUtils.h  MathUtil.h  SortedGridBoundaryMap.h  TermaCalculator.h  TestRayTrace.cpp  TestRayTrace.sln  stdafx.cpp  stdafx.h  utilmacros.h
RtModel/: Beam.cpp  BeamDoseCalc.cpp  ConjGradOptimizer.cpp  Histogram.cpp  HistogramGradient.cpp  ModelObject.cpp  Observer.cpp  Plan.cpp  PlanXmlFile.cpp  Polygon.cpp  Prescription.cpp  ReadMe.txt  RtModel.vcproj  RtModel.vcxproj  Series.cpp  SigmaEstimator.cpp  SigmaEstimator_Integration_Example.cpp  (+3 more)
python/: README.md  TG263_README.md  pyproject.toml  read_process_series.py  setup.py
python/examples/: basic_optimization.py  live_visualization.py  tg263_inference_example.py  tg263_pymedphys_integration.py
python/pybrimstone/: __init__.py  core.pxd  core.pyx  tg263_model.py  tg263_training.py
(+325 files in other folders)
